Broken styles fixed

--- a/frontend/styles/views/login-view-styles.css
+++ b/frontend/styles/views/login-view-styles.css
@@ -3,9 +3,10 @@
   height: 100%;
   width: 100%;
   background: var(--pm-app-bg-color);
+  overflow: auto;
 }
 
-* {
+.login-panel-cont * {
   flex-shrink: 0;
 }
 
@@ -63,7 +64,7 @@ landing-page {
   margin-top: 50px;
 }
 
-vaadin-button {
+vaadin-button[part="vaadin-login-submit"] {
   border-radius: 100px;
 }
 
@@ -73,7 +74,7 @@ vaadin-button {
 }
 
 .email-not-verified-cont span {
-  padding-top: 10px; 
+  padding-top: 10px;
 }
 
 .login-panel {
@@ -82,9 +83,7 @@ vaadin-button {
 
 .policy {
   margin: auto;
-  display: inline-block;
   color: #696969;
-  padding-top: 10px;
   font-size: 0.7em;
 }
 
